--- a/libft/Makefile
+++ b/libft/Makefile
@@ -21,7 +21,7 @@ ft_memcpy.c   ft_strchr.c      ft_strncmp.c     ft_isalpha.c  ft_memmove.c \
 ft_strdup.c   ft_strnstr.c     ft_isascii.c     ft_memset.c   ft_striteri.c \
 ft_strrchr.c  ft_isdigit.c     ft_putchar_fd.c  ft_strjoin.c  ft_strtrim.c \
 ft_strcmp.c	  ft_isspace.c     ft_isnumeric.c   ft_snprintf.c ft_strndup.c \
-ft_strncpy.c  ft_free_tab.c    ft_strjoin_free.c ft_tablen.c ft_tabdup.c
+ft_strncpy.c  ft_free_tab.c    ft_strjoin_free.c ft_tablen.c ft_tabdup.c ft_atol.c
 BONUS_SRC = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c \
 ft_lstlast_bonus.c ft_lstadd_back_bonus.c ft_lstdelone_bonus.c \
  ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c
